$Id: History,v 1.15 2002-02-06 16:05:28 maire Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    TestEm5 History file
                    ------------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

06-02-02 mma (testem5-V04-00-00)
     
06-12-01  mma
- In PrimaryGeneratorAction, possibility to randomize the beam spot
- command /gun/rndm in PrimaryGeneratorMessenger
- similar functionality in geant3: gukine.F
     
28-11-01  mma (testem5-V03-02-02) 
- EventAction: DrawTrack "none"
- small change in vis.mac
- suppression of the rndm commands, now managed by G4RunManager: 
  --> RunAction, RunActionMessenger, EventAction.
     
05-11-01  mma (testem5-V03-02-01)
- mods in TestEm3.cc: the initialisation and vis initialisation are
  not done by default. --> inserted /run/initialize in all macros.
- To get visualisation: > /control/execute vis.mac

        
19-10-01 Steve O'Neale (examples-V03-02-00)
- Update reference output

16-10-01 mma (testem5-V03-02-00)
- removal of G4RW header (EventAction.cc)
- new vis commands (init.mac)
- 80 columns everywhere
    
27-03-01 mma (testem5-V03-00-04)
- set cppflag G4NOHIST = true in gnumakefile
	  
21-02-01 mma (testem5-V03-00-03)
- hbook histograms restored
	  
20-02-01 mma (testem5-V03-00-02)
- verbose stepping adapted for STL
- save rndm at begin of event 
	     
09-01-01 mma
- modified Em5PhysicsList and Em5StepCut in order to make the
  command /step/setMaxStep working
	      