@@ -7,8 +7,8 @@
 #control/saveHistory
 /run/verbose 2
 #
-/calor/cutG 2130.0 micrometer
-/calor/cutE 7.000 micrometer
+/run/particle/setGCut 2130.0 micrometer
+/run/particle/setECut  7.000 micrometer
 /run/initialize
 #
 /calor/setAbsMat Silicon   
