@@ -7,8 +7,8 @@
 #control/saveHistory
 /run/verbose 2
 #
-/calor/cutG 2250.0 micrometer
-/calor/cutE 6.050 micrometer
+/run/particle/setGCut  2250.0 micrometer
+/run/particle/setECut   6.050 micrometer
 /run/initialize
 #
 /calor/setAbsMat Aluminium 
