@@ -1,4 +1,4 @@
-$Id: History,v 1.15 2002-02-06 16:05:28 maire Exp $
+$Id: History,v 1.16 2002-03-08 17:30:17 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,9 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+     
+08-03-02 mma (testem5-V04-00-01)
+- PhysicsList: uniformisation of the setG(E)Cut commands
 
 06-02-02 mma (testem5-V04-00-00)
      
